# yaml-query-language

./: .gitignore  README.md  add_frontmatter.py
.cursor/: .cursorrules  deep-think-prompt.md.txt
.github/workflows/: deploy-playground.yml
blogs/: evaluation-running-python-in-browser.md  pyodide-blog-summary.md  pyodide-pack-investigation.md  running-python-in-browser-with-pyodide-v2.md  running-python-in-browser-with-pyodide.md
docs/: README.md  _config.yml  index.md  playground-proposal.md
docs/analysis/: macro-feature-analysis.md  macro-parameter-notation-comparison.md  schema-enriched-vs-separate-comparison.md  schema-import-use-cases-analysis.md  stereotype-critical-analysis.md
docs/architecture/: README.md  db-migration.md  multi-db.md  security.md
docs/business/: README.md  roi.md  (+3 more)
implementations/python/: README.md  pyproject.toml  test_yql_import.py
implementations/python/src/yql/: __init__.py  ast.py  cli.py  parser.py  security.py
implementations/python/src/yql/generator/: __init__.py  base.py  mysql.py  oracle.py  postgresql.py  sqlserver.py
implementations/python/tests/: __init__.py  test_delete.py  test_generator.py  test_import.py  test_import_limits.py  test_insert.py  test_mysql_generator.py  test_oracle_generator.py  test_parser.py  test_security.py  test_sqlserver_generator.py  test_update.py  test_upsert.py
implementations/python/tests/fixtures/: delete_simple.yql  delete_with_returning.yql  insert_multiple_rows.yql  select_with_limit.yql  upsert_mysql.yql
specs/: README.md  delete.md  schema.md  select.md  update.md  upsert.md
(+100 files in other folders)
