[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yql-parser"
version = "0.1.0"
description = "YQL (YAML Query Language) Parser and SQL Generator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "YQL Team" }
]
keywords = ["yql", "yaml", "sql", "parser", "query"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
yql = "yql.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

